[package]
name = "catalyrst-db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
flate2 = "1"
catalyrst-hashing = { workspace = true }
catalyrst-storage = { workspace = true }
