[package]
name = "catalyrst-deployer"
version = "0.10.0"
edition = "2021"
description = "Rust port of the Decentraland catalyst deployment pipeline"

[dependencies]
catalyrst-types = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
reqwest = { workspace = true }
futures = "0.3"
parking_lot = { workspace = true }
catalyrst-db = { path = "../catalyrst-db" }
