[package]
name = "catalyrst-economy"
version = "0.10.0"
edition = "2021"
description = "Rust port of decentraland/transactions-server (transactions-api.decentraland.org) — meta-transaction relay over the marketplace_squid DB"

[[bin]]
name = "catalyrst-economy"
path = "src/main.rs"

[dependencies]
catalyrst-types = { workspace = true }
catalyrst-crypto = { workspace = true }
catalyrst-fed = { workspace = true }
catalyrst-server = { workspace = true }
catalyrst-db = { workspace = true }
catalyrst-envcfg = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
alloy = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
