[package]
name = "catalyrst-events"
version = "0.1.0"
edition = "2021"
description = "Rust port of decentraland/events (REST API for events.decentraland.org), HTTP-snapshot federation per docs/federation/events.md"

[[bin]]
name = "catalyrst-events"
path = "src/main.rs"

[dependencies]
catalyrst-types = { workspace = true }
catalyrst-fed = { workspace = true }
catalyrst-crypto = { workspace = true }
catalyrst-server = { workspace = true }
catalyrst-db = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"

[dev-dependencies]
ethers-signers = { workspace = true }
ethers-core = { workspace = true }
rand = "0.8"
