[package]
name = "catalyrst-explorer-api"
version = "0.1.0"
edition = "2021"
description = "Bundled Rust ports of the small backend services unity-explorer needs: realm-provider, auth-api, blocklist, builder-api, feature-flags. One binary, one axum router."

[[bin]]
name = "catalyrst-explorer-api"
path = "src/main.rs"

[dependencies]
catalyrst-types = { workspace = true }
catalyrst-crypto = { workspace = true }
catalyrst-fed = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
parking_lot = { workspace = true }
dashmap = { workspace = true }
urlencoding = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
