[package]
name = "catalyrst-fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
catalyrst-crypto = { path = "../catalyrst-crypto" }
catalyrst-storage = { path = "../catalyrst-storage" }
catalyrst-db = { path = "../catalyrst-db" }
catalyrst-deployer = { path = "../catalyrst-deployer" }
tokio = { workspace = true }
rand = "0.8"
bytes = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

# loom for exhaustive interleaving exploration
loom = { version = "0.7", optional = true }

[features]
loom = ["dep:loom"]

[[bin]]
name = "stress"
path = "src/stress.rs"
