[package]
name = "catalyrst-fuzz"
version = "0.9.10"
edition = "2021"

[dependencies]
catalyrst-crypto = { path = "../catalyrst-crypto" }
catalyrst-storage = { path = "../catalyrst-storage" }
catalyrst-db = { path = "../catalyrst-db" }
catalyrst-deployer = { path = "../catalyrst-deployer" }
tokio = { workspace = true }
rand = "0.10"
bytes = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
loom = { version = "0.7", optional = true }

[features]
loom = ["dep:loom"]

[[bin]]
name = "stress"
path = "src/bin/stress/main.rs"
