[package]
name = "catalyrst-hashing"
version = "0.9.14"
edition = "2021"
description = "Decentraland content-addressing: CIDv0 (Qm…) and CIDv1 (bafy…) hashing"

[dependencies]
sha2 = { workspace = true }
bs58 = { workspace = true }
thiserror = { workspace = true }
data-encoding = "2"

[dev-dependencies]
