[package]
name = "catalyrst-lists"
version = "0.9.14"
edition = "2021"
description = "Rust port of dcl-lists.decentraland.org — serves the curated POI coordinate list and the ENS banned-name denylist"

[[bin]]
name = "catalyrst-lists"
path = "src/main.rs"

[dependencies]
catalyrst-envcfg = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
